# well-data-mining

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt
db/: close_con.py  db.py  migrate.py  migration.sql  models.py
scripts/: delete.bat  extract.bat
