[project]
name = "volve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dlisio>=1.0.4",
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
